# winc-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md  index.html
.github/workflows/: benchmark.yml  rust.yaml
demos/: Cargo.toml
demos/src/: http_client.rs  http_server.rs  http_speed_test.rs  iperf3_client.rs  lib.rs  tcp_server.rs  telnet_shell.rs  udp_client.rs  udp_server.rs
demos/src/static/: index.html
demos_async/: Cargo.toml
demos_async/src/: http_client.rs  lib.rs  udp_client.rs  udp_server.rs
dev/bench/: data.js
feather/: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  command_wrapper.py  regression_test.py
feather/.cargo/: config.toml
feather/examples/: async_blinky_embassy.rs  async_connect_saved.rs  blinky.rs  blinky_timer.rs  bypass_mode.rs  connect_network.rs  connect_saved.rs  dns.rs  http_client.rs  http_server.rs  intr.rs  iperf3_client.rs  mdns.rs  oled.rs  ping.rs  prng.rs  provisioning.rs  scan.rs  serial_flasher.rs  speed_test.rs  ssl.rs  udp_client.rs  udp_server.rs
feather/examples/ext_tcp_stack/: mod.rs
feather/examples/runner/: mod.rs
feather/examples/time_driver/: mod.rs
feather/src/: init.rs  init2.rs  lib.rs  shared.rs
feather/src/init/: usb_logging.rs
feather/src/shared/: spi_stream.rs  transfer_spi.rs
feather/tests/: example_test.rs
feather_async/: Cargo.toml
feather_async/examples/: bypass_mode.rs  connect_network.rs  http_client.rs  prng.rs  provisioning.rs  udp_client.rs  udp_server.rs
feather_async/src/: lib.rs  shared.rs
feather_async/src/shared/: spi_stream.rs
feather_winc_board/: Cargo.toml
feather_winc_board/src/: lib.rs
python/: mdns.py  mdns_decode.py  mdns_receive.py  multicast_recv.py  multicast_send.py  server.py  tcp_server.py  udp_client.py  udp_server.py
reference/WiFi101/: CHANGELOG  keywords.txt
reference/WiFi101/docs/: api.md
reference/WiFi101/src/: WiFi.cpp  WiFi101.h  WiFiClient.cpp  WiFiClient.h  WiFiMDNSResponder.cpp  WiFiSSLClient.cpp  WiFiSSLClient.h  WiFiServer.cpp  WiFiServer.h  WiFiUdp.cpp  WiFiUdp.h
reference/atmel_studio/: WINC1500_IPERF_SERVER_EXAMPLE1.atsln
reference/atmel_studio/WINC1500_IPERF_SERVER_EXAMPLE1/: WINC1500_IPERF_SERVER_EXAMPLE1.cproj
reference/iperf/: LICENSE  Makefile.in  RELNOTES.md  aclocal.m4  configure  configure.ac
reference/iperf/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
reference/iperf/contrib/: README.txt
reference/iperf/docs/: invoking.rst
reference/iperf/examples/: Makefile.in
reference/iperf/src/: Makefile.in  cjson.h  iperf_api.c  iperf_client_api.c  iperf_error.c  iperf_sctp.c  iperf_tcp.c  iperf_udp.c  net.c
src/: client.rs  lib.rs
src/wifi/: mod.rs  udp_stack.rs
systick-timer/: Cargo.toml
systick-timer/src/: embassy_driver.rs  lib.rs  timer.rs
test_progs/: Cargo.toml
tests/: basic.rs
winc-rs/: Cargo.toml
winc-rs/src/: client.rs  errors.rs  lib.rs  manager.rs  readwrite.rs  socket.rs  stack.rs  transfer.rs
winc-rs/src/async_client/: dns.rs  ethernet.rs  mod.rs  module.rs  tcp_stack.rs  udp_stack.rs
winc-rs/src/client/: dns.rs  ethernet.rs  flash.rs  ota.rs  prng.rs  sock_holder.rs  socket_callbacks.rs  (+4 more)
(+203 files in other folders)
