[package]
name = "demos_async"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-nal-async = { version = "0.9.0", default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
smol = "2.0"
std-embedded-nal-async = { path = "../dep/std-embedded-nal/std-embedded-nal-async" }

[[bin]]
name = "demo_async"
path = "bin/main.rs"
required-features = ["std"]

[features]
default = ["std"]
std = ["log"]
defmt = ["dep:defmt"]
